--- a/index.html
+++ b/index.html
@@ -8,10 +8,23 @@
   <body>
     <main role="main">
       <div class="jumbotron">
-        <div>
+        <div class="container">
           <h1>Some text about this page</h1>
-        </div>  
+        </div>
       </div>       
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-0 col-md-4">
+          </div>
+          <div class="col-xs-12 col-md-4">
+            <p>
+              Here I will write some stuff about this page
+            </p>
+          </div>
+          <div class="col-xs-0 col-md-4">
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="container">
        <p>&copy; Rafael X. Morales Georgi 2017</p>
