updated the page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <main role="main">
       <div class="jumbotron">
         <div class="container">
-          <h1>Some text about this page</h1>
+          <h1>
+            Rafael X.
+          </h1>
         </div>
       </div>       
       <div class="container">
@@ -18,7 +20,34 @@
           </div>
           <div class="col-xs-12 col-md-4">
             <p>
-              Here I will write some stuff about this page
+              Hey, I am Rafael! 
+            </p>
+            <p>
+              I am currently a Computer Science Student at the Karlsruhe Institute of Technology in Karlsruhe, Germany.
+            </p>
+            <p>
+              I like working on cool projects in the following fields:
+                <ul>
+                  <li>Artificial Intelligence</li>
+                  <li>Information Security</li>
+                  <li>Reverse Engineering and Malware Analysis</li>
+                  <!-- <li>Data Analytics</li> -->
+                  <!-- <li>Craftbeer and Streetfood</li> -->
+                </ul>
+            </p>
+            <p>
+              I speak the following languages:
+              <ul>
+                <li>English</li>
+                <li>German</li>
+                <li>Spanish</li>
+                <li>Dutch</li>
+              </ul>
+            </p>
+            <p>
+              So let's work on cool stuff together!
+            </p>
+            <p>
             </p>
           </div>
           <div class="col-xs-0 col-md-4">
