--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                   <li>Information Security</li>
                   <li>Reverse Engineering and Malware Analysis</li>
                   <!-- <li>Data Analytics</li> -->
-                  <!-- <li>Craftbeer and Streetfood</li> -->
+                  <li>Craftbeer and Streetfood</li>
                 </ul>
             </p>
             <p>
