--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
                 <ul>
                   <li>Artificial Intelligence</li>
                   <li>Information Security</li>
-                  <li>Reverse Engineering and Malware Analysis</li>
-                  <!-- <li>Data Analytics</li> -->
+                  <!-- <li>Reverse Engineering and Malware Analysis</li> -->
+                  <li>Data Analytics</li>
                   <li>Craftbeer and Streetfood</li>
                 </ul>
             </p>
@@ -45,7 +45,7 @@
               </ul>
             </p>
             <p>
-              So let's work on cool stuff together!
+              I'd love to work on cool stuff with you!
             </p>
             <p>
             </p>
@@ -56,7 +56,7 @@
       </div>
     </main>
     <footer class="container">
-       <p>&copy; Rafael X. Morales Georgi 2018</p>
+       <p>&copy; Rafael X. Morales Georgi 2019</p>
     </footer>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
